@@ -22,6 +22,6 @@
     <string id="69602">OK</string>
     <string id="69603">Terrible</string>
     <string id="69604">SynopsiTV Rating</string>
-    <string id="69700">To use our service, sign up at [B]www.synopsi.tv[/B]</string>
+    <string id="69700">To use our service, sign up at [B]www.synopsi.tv[/B].</string>
     
 </strings>
